codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_click_expanded_work_group.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: expanded.backend()
---
"▾ Work: read 2 files                                                            "
"                                                                                "
"• Explored                                                                      "
"  └ Read file app.rs                                                            "
"                                                                                "
"• Explored                                                                      "
"  └ Read file lib.rs                                                            "
"────────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project · Alt+I inspect Work                       "
