codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_closed_parent_side_focused.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Parent                                  │ Side  ⌥ + 1 / ⌥ + 2 focus               "
"parent transcript                        │╭───────────────────────────────────────╮"
"                                         ││ >_ Quiet for Codex (codex-quiet 0.14… │"
"                                         ││                                       │"
"                                         ││ model:     loading   /model to change │"
"                                         ││ directory: /tmp/project               │"
"                                         │╰───────────────────────────────────────╯"
"─────────────────────────────────────────│─────────────────────────────────────────"
"                                         │                                         "
"› Conversation closed.                   │› side draft                             "
"                                         │                                         "
"  gpt-5.6-sol default · /tmp/project     │  gpt-5.6-sol default · /tmp/project     "
