codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_global_warning_fans_out.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Parent  ⌥ + 1 / ⌥ + 2 focus             │ Side                                    "
"⚠ Shared configuration warning           │⚠ Shared configuration warning           "
"                                         │                                         "
"                                         │╭───────────────────────────────────────╮"
"                                         ││ >_ Quiet for Codex (codex-quiet 0.14… │"
"                                         ││                                       │"
"                                         ││ model:     loading   /model to change │"
"                                         ││ directory: /tmp/project               │"
"                                         │╰───────────────────────────────────────╯"
"                                         │                                         "
"                                         │                                         "
"                                         │                                         "
"                                         │                                         "
"─────────────────────────────────────────│─────────────────────────────────────────"
"                                         │                                         "
"› parent draft                           │› side draft                             "
"                                         │                                         "
"  gpt-5.6-sol default · /tmp/project     │  gpt-5.6-sol default · /tmp/project     "
