codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_raw_output_mode_fans_out.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Parent                                  │ Side  ⌥ + 1 / ⌥ + 2 focus               "
"                                         │Quiet for Codex (codex-quiet             "
"                                         │0.146.0+local)                           "
"                                         │model: loading                           "
"                                         │directory: /tmp/project                  "
"                                         │                                         "
"                                         │                                         "
"                                         │                                         "
"                                         │                                         "
"› parent draft                           │› side draft                             "
"                                         │                                         "
"  gpt-5.6-sol default · /tmp/project     │  gpt-5.6-sol default · /tmp/project     "
