codex-rs/tui/src/app/snapshots/codex_tui__app__owned_screen__tests__owned_screen_wide_split_parent_focused.snap
---
source: tui/src/app/owned_screen_tests.rs
expression: terminal.backend()
---
" Parent  ⌥ + 1 / ⌥ + 2 focus             │ Side                                    "
"parent transcript                        │side transcript                          "
"                                         │                                         "
"                                         │╭───────────────────────────────────────╮"
"                                         ││ >_ Quiet for Codex (codex-quiet 0.14… │"
"                                         ││                                       │"
"                                         ││ model:     loading   /model to change │"
"                                         ││ directory: /tmp/project               │"
"                                         │╰───────────────────────────────────────╯"
"                                         │                                         "
"                                         │                                         "
"─────────────────────────────────────────│─────────────────────────────────────────"
"                                         │                                         "
"› parent draft                           │› side draft                             "
"                                         │                                         "
"  gpt-5.6-sol default · /tmp/project     │  gpt-5.6-sol default · /tmp/project     "
